--- a/BingeWatcher.DataAccess/BingeWatcher.DataAccess.csproj
+++ b/BingeWatcher.DataAccess/BingeWatcher.DataAccess.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BingeWatcher.Models\BingeWatcher.Models.csproj" />
+  </ItemGroup>
+
 </Project>
