--- a/BingeWatcher.Models/BingeWatcher.Models.csproj
+++ b/BingeWatcher.Models/BingeWatcher.Models.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.7.23375.4" />
+  </ItemGroup>
+
 </Project>
