--- a/BingeWatcher/BingeWatcher.csproj
+++ b/BingeWatcher/BingeWatcher.csproj
@@ -16,4 +16,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BingeWatcher.DataAccess\BingeWatcher.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
